# rust-webserver

./: .gitignore  Cargo.toml  main.rs
modules/: api.rs  mongodb.rs
static/: index.html
