[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust-server"
path = "main.rs"
